--- a/fig.yml
+++ b/fig.yml
@@ -1,5 +1,5 @@
 wechat:
-  image: kk17/coolcantonese
+  image: daocloud.io/adrian/wechat-psa-sample
   environment:
     - WECHAT_TOKEN=R1A5ZtDqm7OrpFa9xPKsu
     - BAIDU_TRANSLATE_CLIENT_ID=foAIGL40ZOCv2lrZhnRQ1QCf
@@ -10,8 +10,8 @@ wechat:
   ports:
     - "80:80"
   volumes:
-    - .:/Cantonese
-    - /Cantonese_audio
+    #- .:/Cantonese
+    #- /Cantonese_audio
   links:
     - redis
 
