--- a/fig.yml
+++ b/fig.yml
@@ -1,5 +1,5 @@
 wechat:
-  image: daocloud.io/adrian/wechat-psa-sample
+  image: adrian/wechat-psa-sample
   environment:
     - WECHAT_TOKEN=R1A5ZtDqm7OrpFa9xPKsu
     - BAIDU_TRANSLATE_CLIENT_ID=foAIGL40ZOCv2lrZhnRQ1QCf
